--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="showcase-content">
             <h1>See what's next</h1>
             <p>Watch anywhere. Cancel anytime</p>
-            <a href="#" class="btn-xl">
+            <a href="#" class="btn btn-xl">
                 Watch Free for 30 Days <i class="fas fa-chevron-right btn-icon"></i>
             </a>
         </div>
